[package]
name = "fil_actor_multisig"
description = "Builtin multisig actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2018"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "10.0.0-alpha.1", path = "../../runtime"}

anyhow = "1.0.65"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
frc42_dispatch ={path = "../../../../filecoin/frc42_dispatch" }
fvm_ipld_blockstore = { path = "../../../../pl/ref-fvm/ipld/blockstore" }
fvm_ipld_hamt = { path = "../../../../pl/ref-fvm/ipld/hamt" }
fvm_ipld_encoding = { path = "../../../../pl/ref-fvm/ipld/encoding" }
fvm_shared = { path = "../../../ref-fvm/shared" }
indexmap = { version = "1.8.0", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
fil_actors_runtime = { version = "10.0.0-alpha.1", path = "../../runtime", features = ["test_utils", "sector-default"] }
lazy_static = "1.4.0"

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
