[package]
name = "fil_actor_paych"
description = "Builtin paych actor for Filecoin"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { version = "12.0.0", path = "../../runtime" }
frc42_dispatch = { workspace = true }
fvm_shared = { workspace = true }
num-traits = "0.2.14"
num-derive = "0.3.3"
serde = { workspace = true }
cid = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { path = "../../runtime", features = ["test_utils", "sector-default"] }
fvm_ipld_amt = { workspace = true }
derive_builder = "0.10.2"
lazy_static = "1.4.0"

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
