[package]
name = "fil_actor_placeholder"
description = "Builtin placeholder actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fvm_sdk = { version = "3.0.0-alpha.18", optional = true }
fvm_shared = { version = "3.0.0-alpha.15", optional = true }

[features]
fil-actor = ["fvm_sdk", "fvm_shared"]
