[package]
name = "fil_actor_power"
description = "Builtin power actor for Filecoin"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_hamt = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
cid = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { workspace = true, features = ["test_utils", "sector-default"] }
fil_actor_reward = { workspace = true }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
